--- a/css/darkMode.css
+++ b/css/darkMode.css
@@ -1,64 +1,79 @@
 /* Custom styles for the toggle switch */
 .toggle-container {
-    display: flex;
-    align-items: center;
-    background-color: #eaeaea;
-    width: 70px;
-    height: 30px;
-    border-radius: 15px;
-    cursor: pointer;
-    transition: background-color 0.3s;
+  display: flex;
+  align-items: center;
+  background-color: #eaeaea;
+  width: 70px;
+  height: 30px;
+  border-radius: 15px;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 .toggle-circle {
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    background-color: #fff;
-    margin-left: 3px;
-    transition: transform 0.3s;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: #fff;
+  margin-left: 3px;
+  transition: transform 0.3s;
 }
 
 /* Checked state */
 .toggle-container[data-mode="dark"] {
-    background-color: #000;
+  background-color: #000;
 }
 
 .toggle-container[data-mode="dark"] .toggle-circle {
-    transform: translateX(40px);
+  transform: translateX(40px);
 }
 
 /* Dark mode styles */
 body[data-mode="dark"] {
-    color: #ffff;
-    background-color: #000;
+  color: #ffff;
+  background-color: #000;
 }
 
 body[data-mode="dark"] header {
-    background: url(https://socialify.git.ci/avinashkranjan/Amazing-Python-Scripts/image?description=1&forks=1&issues=1&language=1&logo=https%3A%2F%2Fuser-images.githubusercontent.com%2F55796944%2F104455539-7258a200-55cd-11eb-90dc-7c9981e73d72.png&owner=1&pulls=1&stargazers=1&theme=Dark) no-repeat;
-    background-size: 100% 100%;
+  background: url(https://socialify.git.ci/avinashkranjan/Amazing-Python-Scripts/image?description=1&forks=1&issues=1&language=1&logo=https%3A%2F%2Fuser-images.githubusercontent.com%2F55796944%2F104455539-7258a200-55cd-11eb-90dc-7c9981e73d72.png&owner=1&pulls=1&stargazers=1&theme=Dark)
+    no-repeat;
+  background-size: 100% 100%;
 }
 
 body[data-mode="dark"] .contri {
-    background-color: #000;
+  background-color: #000;
 }
 
 /*scripts page */
 
 body[data-mode="dark"] .card-body {
-    background-color: #000;
+  background-color: #000;
 }
 
 body[data-mode="dark"] .author {
-    color: #fff;
+  color: #fff;
 }
 
 body[data-mode="dark"] .prev-next {
-    fill: #fff;
+  fill: #fff;
 }
 
 /*contact page */
 
-body[data-mode="dark"] .mainscreen {
-    background-color: #000; 
+body[data-mode="dark"] .mainscreen,
+body[data-mode="dark"] .formpart,
+body[data-mode="dark"] label[for="name"],
+body[data-mode="dark"] label[for="email"],
+body[data-mode="dark"] label[for="message"] {
+  background-color: #000;
+}
+
+body[data-mode="dark"] .inputbox {
+  color: #000; /* Change text color to black */
+  background-color: #fff; /* Change background color to white */
+}
+
+/* Contact page form elements in checked state (e.g., checkbox) */
+body[data-mode="dark"] input.agree:checked {
+  background-color: #000; /* Change background color of checked checkbox to black */
 }
